--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
     <title>OmniFood</title>
 </head>
 <body>
-    <h1>OmniFood</h1>
+    <header >
+        <div class="hero-text-box">
+            <h1>Goodbye junk food. Hello super healthy meals.</h1>
+            <a href="#">I’m hungry</a>
+            <a href="#">Show me more</a>
+
+        </div>
+    </header>
+    
     
 </body>
 </html>
