--- a/index.html
+++ b/index.html
@@ -14,10 +14,21 @@
 </head>
 <body>
     <header >
+        <nav>
+            <div class="row">
+                <img src="assets/logo-white.png" alt="Omnifood logo" class="logo">
+                <ul class="main-nav">
+                    <li><a href="#">Food delivery</a></li>
+                    <li><a href="#">How it works</a></li>
+                    <li><a href="#">Our cities</a></li>
+                    <li><a href="#">Sign up</a></li>
+                </ul>
+            </div>
+        </nav>
         <div class="hero-text-box">
-            <h1>Goodbye junk food. Hello super healthy meals.</h1>
-            <a href="#">I’m hungry</a>
-            <a href="#">Show me more</a>
+            <h1>Goodbye junk food. <br> Hello super healthy meals.</h1>
+            <a href="#" class="btn btn-full">I’m hungry</a>
+            <a href="#" class="btn btn-ghost">Show me more</a>
 
         </div>
     </header>
@@ -25,3 +36,4 @@
     
 </body>
 </html>
+
