--- a/index.html
+++ b/index.html
@@ -66,6 +66,55 @@
         </div>
 
     </section>
+    <section class="section-meals">
+        <ul class="meals-showcase">
+            <li>
+                <figure class="meal-photo">
+                    <img src="assets/1.jpg" alt="Korean bibimbap with egg and vegetables">
+                </figure>
+            </li>
+            <li>
+                <figure class="meal-photo">
+                    <img src="assets/2.jpg" alt="Simple italian pizza with cherry tomatoes">
+                </figure>
+            </li>
+            <li>
+                <figure class="meal-photo">
+                    <img src="assets/3.jpg" alt="Chicken breast steak with vegetables">
+                </figure>
+            </li>
+            <li>
+                <figure class="meal-photo">
+                    <img src="assets/4.jpg" alt="Autumn pumpkin soup">
+                </figure>
+            </li>
+
+        </ul>
+        <ul class="meals-showcase">
+            <li>
+                <figure class="meal-photo">
+                    <img src="assets/5.jpg" alt="Paleo beef steak with vegetables">
+                </figure>
+            </li>
+            <li>
+                <figure class="meal-photo">
+                    <img src="assets/6.jpg" alt="Healthy baguette with egg and vegetables">
+                </figure>
+            </li>
+            <li>
+                <figure class="meal-photo">
+                    <img src="assets/7.jpg" alt="Burger with cheddar and bacon">
+                </figure>
+            </li>
+            <li>
+                <figure class="meal-photo">
+                    <img src="assets/8.jpg" alt="Granola with cherries and strawberries">
+                </figure>
+            </li>
+
+        </ul>
+
+    </section>
     
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
@@ -73,6 +122,14 @@
 </html>
 
 <!--
+1.	Korean bibimbap with egg and vegetables
+2.	Simple italian pizza with cherry tomatoes
+3.	Chicken breast steak with vegetables 
+4.	Autumn pumpkin soup
+5.	Paleo beef steak with vegetables
+6.	Healthy baguette with egg and vegetables
+7.	Burger with cheddar and bacon
+8.	Granola with cherries and strawberries
 
 
 -->
