--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,9 +9,17 @@
     <link rel="stylesheet" href="vendors/css/1.3 grid.css">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="vendors/css/ionicons/">
+    <link rel="stylesheet" href="styles/media.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
+    [if lt IE 9]
+    <script src="bower_components/html5shiv/dist/html5shiv.js"></script>
+    [endif]
+    <!--[if (gte IE 6)&(lte IE 8)]>
+  <script type="text/javascript" src="selectivizr.js"></script>
+  <noscript><link rel="stylesheet" href="[fallback css]" /></noscript>
+<![endif]-->
     <title>OmniFood</title>
 </head>
 <body>
