--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
+   <link rel="apple-touch-icon" sizes="180x180" href="styles/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="styles/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="styles/favicon/favicon-16x16.png">
+    <link rel="manifest" href="styles/favicon/site.webmanifest">
+    <link rel="mask-icon" href="styles/favicon/safari-pinned-tab.svg" color="#000000">
+    <link rel="shortcut icon" href="styles/favicon/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="/styles/favicon/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
 
     
      <!--[if lt IE 9]>
