--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Omnifood is a premium food delivery service with the mission to bring affordable and healthy meals to as many people as possible.">
+
     <link rel="stylesheet" href="vendors/css/normalize.css">
-    <link rel="stylesheet" href="vendors/css/1.3 grid.css">
+    <link rel="stylesheet" href="vendors/css/grid.css">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="vendors/css/ionicons/">
     <link rel="stylesheet" href="styles/media.css">
@@ -93,6 +95,7 @@
 
     </section>
     <section class="section-meals">
+        <h2>Our meals</h2>
         <ul class="meals-showcase clearfix">
             <li>
                 <figure class="meal-photo">
@@ -222,7 +225,7 @@
                         110+ top chefs
                     </div>
                     <div class="city-feature" >
-                        <ion-icon name="logo-twitter"class="icon-small"></ion-icon>
+                        <ion-icon name="logo-twitter" class="icon-small"></ion-icon>
                        <a href="#">@omnifood_berlin</a>
                     </div>
                 </div>
@@ -347,7 +350,7 @@
             <form action="#" method="post" class="contact-form">
                 <div class="row">
                     <div class="col span-1-of-3">
-                        <label for="nam">Name</label>
+                        <label for="name">Name</label>
                     </div>
                     <div class="col span-2-of-3">
                         <input type="text" name="name" id="name" placeholder="Your name" required>
